hve-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore-metrics
  namespace: dap
  labels:
    app: hive-metastore
spec:
  selector:
    app: hive-metastore
  ports:
    - name: metrics
      port: 9404
      targetPort: 9404
  type: ClusterIP
